[package]
name = "prometheus-remote-write"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7.1"
once_cell = "1.21.3"
prost = "0.13.5"
reqwest = "0.12.18"
serde = {version = "1.0.219", features = ["derive"]}
serde_magnus = "0.9.0"
snap = "1.1.1"
tokio = {version = "1.45.1", feature = ["rt", "rt-multi-thread"]}
